--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 html, body {
     margin: 0;
-    display: flex;
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
     flex-direction: column;
     height: 100%;
     font-family: "Open Sans", sans-serif;
 }
 
 header {
-    display: flex;
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
     flex: 0 0 60px;
     align-items: center;
 
     background-color: #f1f1f1;
     font-family: "Raleway", sans-serif;
+    opacity: 0;
+    animation: appear 1s ease-in .2s 1;
+    animation-fill-mode: forwards;
 }
 
 header > h1 {
-    display: flex;
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
     justify-content: space-between;
     align-items: center;
     margin: 14px;
@@ -29,6 +41,7 @@ header > h1,i {
 
 ul {
     display: flex;
+    flex: 1 1 auto;
     margin: 0;
     padding: 20px;
     width: 75%;
@@ -36,7 +49,6 @@ ul {
     justify-content: flex-end;
 
     list-style-type: none;
-    overflow: auto;
 }
 
 li {
@@ -45,7 +57,48 @@ li {
     text-decoration: none;
 }
 
+/* Absurdamente importante poner los pseudoclasses en ORDEN */
+li:visited {}
 li:hover{
     color: orange;
     cursor: default;
+}
+
+.title {
+    margin:90px;
+    padding: 0;
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    opacity: 0;
+    animation: appear 1s ease-in .2s 1;
+    animation-fill-mode: forwards;
+}
+
+.terminal {
+    animation: slide 1s ease-in-out 1.4s 1;
+    animation-fill-mode: forwards;
+}
+
+#name {
+    animation: appear 1s ease-in 0s 1;
+    animation-fill-mode: forwards;
+}
+
+/* Animations */
+@keyframes slide {
+    from {
+        transform: translatex(0);
+    }
+    to {
+        transform: translatex(180px);
+    }
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
