--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ html, body {
     display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
     flex-direction: column;
     height: 100%;
-    font-family: "Open Sans", sans-serif;
+
+    font-family: 'Roboto', sans-serif;
+    transition: background-color 1.2s ease 0s;
 }
 
 header {
@@ -18,7 +20,7 @@ header {
     align-items: center;
 
     background-color: #f1f1f1;
-    font-family: "Raleway", sans-serif;
+    font-family: 'Raleway', sans-serif;
     opacity: 0;
     animation: appear 1s ease-in .2s 1;
     animation-fill-mode: forwards;
@@ -66,7 +68,7 @@ li:hover{
 
 .title {
     padding: 0;
-    font-family: "Raleway", sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 400;
     opacity: 0;
     animation: appear 1s ease-in .2s 1;
@@ -81,6 +83,75 @@ li:hover{
 #name {
     animation: appear 1s ease-in 0s 1;
     animation-fill-mode: forwards;
+}
+
+/* Main Section */
+main {
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+    flex-direction: column;
+    align-items: center;
+    margin-top: 280px;
+
+    color: #cdd0d6;
+    font-weight: 300;
+}
+
+main > p:first-of-type {
+    font-size: 32pt;
+}
+
+main:nth-child(2) {
+    font-size: 24pt;
+}
+
+p {
+    margin: 20px;
+}
+
+#contact-buttons {
+    margin: 50px;
+}
+
+#contact-buttons > a {
+    margin: 10px;
+}
+
+a:link{
+    color: #cdd0d6;
+    cursor: default;
+}
+a:visited {
+    color: #cdd0d6;
+    cursor: default;
+}
+a:hover{
+    color: #bdbfc1;
+    cursor: default;
+}
+a:active{
+    color: #cdd0d6;
+    cursor: default;
+}
+
+footer {
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto;
+
+    color: #cdd0d6;
+    font-weight: 300;
+    font-size: 16pt;
+}
+
+footer > p {
+    margin: 15px;
 }
 
 /* Animations */
